--- a/webBanTiVi/src/main/resources/templates/admin/page/coupon/coupon.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/coupon/coupon.html
@@ -229,17 +229,8 @@
                                                     <button type="submit"
                                                             class="btn btn-primary btn-control"
                                                             onclick="return confirm('Xác nhận cập nhật')">
-                                                        Update
+                                                        Sửa
                                                     </button>
-                                                </div>
-                                                <div class="w-auto">
-                                                    <a th:href="@{/admin/coupon/delete/{id}(id=${coupon.id})}"
-                                                       onclick="return confirm('Xác nhận xóa')">
-                                                        <button type="button"
-                                                                class="btn btn-primary btn-control">
-                                                            Delete
-                                                        </button>
-                                                    </a>
                                                 </div>
                                             </div>
                                         </form>
@@ -247,12 +238,6 @@
                                 </div>
                             </div>
                         </div>
-                        <a th:href="@{/admin/coupon/delete/{id}(id=*{coupon.id})}"
-                           onclick="return confirm('Xác nhận xóa')">
-                            <button type="button" class="btn btn-icon btn-danger">
-                                <span class="bx bxs-trash"></span>
-                            </button>
-                        </a>
                     </td>
                 </tr>
                 </tbody>
@@ -262,40 +247,7 @@
     </div>
     <div class="card-footer">
         <div class="d-inline-flex float-end">
-            <div class="mx-3 row" style="width: 180px">
-                <label for="select-view" class="col-form-label col-5 text-end">View:</label>
-                <div class="col-7">
-                    <select class="form-select text-start" id="select-view">
-                        <option>10</option>
-                        <option>20</option>
-                        <option>40</option>
-                        <option>80</option>
-                    </select>
-                </div>
-            </div>
-            <div aria-label="Page pagination">
-                <ul class="pagination">
-                    <li class="page-item first">
-                        <a class="page-link" href="javascript:void(0);"><i class="tf-icon bx bx-chevrons-left"></i></a>
-                    </li>
-                    <li class="page-item prev">
-                        <a class="page-link" href="javascript:void(0);"><i
-                                class="tf-icon bx bx-chevron-left"></i></a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="javascript:void(0);">1</a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="javascript:void(0);">2</a>
-                    </li>
-                    <li class="page-item next">
-                        <a class="page-link" href="javascript:void(0);"><i class="tf-icon bx bx-chevron-right"></i></a>
-                    </li>
-                    <li class="page-item last">
-                        <a class="page-link" href="javascript:void(0);"><i class="tf-icon bx bx-chevrons-right"></i></a>
-                    </li>
-                </ul>
-            </div>
+
         </div>
     </div>
 </div>
