--- a/webBanTiVi/src/main/resources/templates/login/forgot-password.html
+++ b/webBanTiVi/src/main/resources/templates/login/forgot-password.html
@@ -59,8 +59,8 @@
                     <form
                             id="formAuthentication"
                             class="mb-3"
-                            action="index.html"
                             method="POST"
+                            th:action="@{/login/resetPassword}"
                     >
                         <div class="mb-3">
                             <label for="email" class="form-label">Email</label>
@@ -70,8 +70,9 @@
                                     id="email"
                                     name="email"
                                     placeholder="Nhập email"
-                                    autofocus
+                                    th:name="email"
                             />
+                            <p class="text-danger" th:if="${errorReset!=''}">[(${errorReset})]</p>
                         </div>
                         <button class="btn btn-primary d-grid w-100">
                             Send Reset Link
