--- a/webBanTiVi/src/main/resources/templates/user/page/product/pay.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/pay.html
@@ -70,7 +70,7 @@
                                     <div class="card-body" th:id="add">
                                         <div>
                                             <!--                                            ten, sdt-->
-                                            <div class="row justify-content-between">
+                                            <div class="row justify-content-between mb-3">
                                                 <div class="col">
                                                     <label class="form-label">Tên người nhận</label>
                                                     <input class="form-control" type="text" placeholder="họ và tên"
@@ -92,9 +92,8 @@
                                                          th:errors="*{phoneNumber}"></div>
                                                 </div>
                                             </div>
-                                            <br>
                                             <!--                                                email-->
-                                            <div class="mb-3">
+                                            <div class="mb-3" th:if="${session.user==null}">
                                                 <label class="form-label">Email</label>
                                                 <input type="email" class="form-control"
                                                        placeholder="oanhpham085@gmail.com"
@@ -105,7 +104,12 @@
                                                      th:if="${#fields.hasErrors('email')}"
                                                      th:errors="*{email}"></div>
                                             </div>
-                                            <br>
+                                            <div class="mb-3" th:if="${session.user!=null}" hidden="hidden">
+                                                <input type="email" class="form-control"
+                                                       placeholder="oanhpham085@gmail.com"
+                                                       th:value="${session.user.email}"
+                                                       id="email" th:name="email">
+                                            </div>
                                             <!--                                                address-->
                                             <div class="mb-3">
                                                 <label class="form-label">Địa chỉ nhận hàng</label>
