--- a/webBanTiVi/src/main/resources/templates/admin/page/evaluate/evaluate.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/evaluate/evaluate.html
@@ -8,7 +8,7 @@
     giá: <span th:text="${product.nameProduct}"></span></h4>
 <div class="card mb-3 ">
     <div class="card-header">
-        <input class="form-control" type="search" id="search" placeholder="Nhập tên thuộc tính muốn tìm">
+        <input class="form-control" type="search" id="search" placeholder="Nhập thông tin muốn tìm">
     </div>
     <div class="card-body">
         <div class="row">
