--- a/webBanTiVi/src/main/resources/templates/admin/page/coupon/coupon.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/coupon/coupon.html
@@ -1,12 +1,18 @@
+<html xmlns:th="http://www.thymeleaf.org">
+<style>
+    .error {
+        color: red;
+    }
+</style>
 <h4 class="fw-semibold py-3 mb-4"> Danh sách giảm giá </h4>
-
 <div class="mb-4">
     <div class="row justify-content-end me-4">
         <button type="button" class="btn btn-success mb-4 w-auto" data-bs-toggle="modal" data-bs-target="#largeModal">
             <i class='tf-icon bx bx-plus-medical'></i> Thêm giảm giá
         </button>
     </div>
-    <form th:action="@{/admin/coupon/save}" method="post" th:object="${coupon}" enctype="multipart/form-data">
+    <form th:action="@{/admin/coupon/save}" method="post" th:object="${coupon}" enctype="multipart/form-data"
+          th:name="myform" th:onsubmit="return validateForm()">
         <div class="modal fade" th:id="largeModal" tabindex="-1"
              aria-hidden="true">
             <div class="modal-dialog modal-lg">
@@ -35,6 +41,10 @@
                                 <div class="mb-3">
                                     <label class="form-label">Mã giảm giá:</label>
                                     <input type="text" class="form-control" th:name="code">
+                                    <span id="codeloc" class="error"></span>
+                                    <div class="alert alert-warning"
+                                         th:if="${#fields.hasErrors('code')}"
+                                         th:errors="*{code}"></div>
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label">Giá trị:</label>
@@ -42,14 +52,26 @@
                                         <input type="number" class="form-control" th:name="value">
                                         <span class="input-group-text">%</span>
                                     </div>
+                                    <span id="valueloc" class="error"></span>
+                                    <div class="alert alert-warning"
+                                         th:if="${#fields.hasErrors('value')}"
+                                         th:errors="*{value}"></div>
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label">Ngày bắt đầu:</label>
                                     <input type="date" class="form-control" th:name="dateStart">
+                                    <span id="dateStartloc" class="error"></span>
+                                    <div class="alert alert-warning"
+                                         th:if="${#fields.hasErrors('dateStart')}"
+                                         th:errors="*{dateStart}"></div>
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label">Ngày kết thúc:</label>
                                     <input type="date" class="form-control" th:name="dateEnd"/>
+                                    <span id="dateEndloc" class="error"></span>
+                                    <div class="alert alert-warning"
+                                         th:if="${#fields.hasErrors('dateEnd')}"
+                                         th:errors="*{dateEnd}"></div>
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label">Trạng thái:</label>
@@ -66,6 +88,10 @@
                                             <label class="form-check-label"
                                             >Chưa hoạt động</label>
                                         </div>
+                                        <span id="activeloc" class="error"></span>
+                                        <div class="alert alert-warning"
+                                             th:if="${#fields.hasErrors('active')}"
+                                             th:errors="*{active}"></div>
                                     </div>
                                 </div>
                             </div>
@@ -250,4 +276,72 @@
         </div>
     </div>
 </div>
-<script src="/admin/plugin/js/loadImage.js"></script>
+<script src="/admin/plugin/js/loadImage.js">
+    function validateForm() {
+
+        var code = document.myform.code.value;
+        var value = document.myform.value.value;
+        var dateStart = document.myform.startDay.value;
+        var dateEnd = document.myform.expirationDate.value;
+        var status = false;
+
+        //code
+        if (code.length < 1) {
+            document.getElementById("codeloc").innerHTML =
+                " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống mã!";
+            status = false;
+        } else {
+            document.getElementById("codeloc").innerHTML =
+                " <i class='bx bx-x-circle' style='color:#ff0000' ></i>";
+            status = true;
+        }
+        //value
+        if (value.length < 1) {
+            document.getElementById("valueloc").innerHTML =
+                " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống giá trị!";
+            status = false;
+        } else {
+            document.getElementById("valueloc").innerHTML = "";
+            status = true;
+        }
+        //dateStart
+        if (dateStart.length < 1) {
+            document.getElementById("dateStartloc").innerHTML =
+                " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống ngày bắt đầu!";
+            status = false;
+        } else {
+            document.getElementById("dateStartloc").innerHTML = "";
+            status = true;
+        }
+        //dateEnd
+        if (dateEnd.length < 1) {
+            document.getElementById("dateEndloc").innerHTML =
+                " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống ngày kết thúc!";
+            status = false;
+        } else if (expirationDate.length < startDay.length) {
+            document.getElementById("dateEndloc").innerHTML =
+                " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Ngày kết thúc phải lớn hơn ngày bắt đầu!";
+            status = false;
+        } else {
+            document.getElementById("dateEndloc").innerHTML = "";
+            status = true;
+        }
+        //active
+        // var active = document.form.lang;
+        var active = document.myform.active.value;
+        for (var i = 0; i < active.length; i++) {
+            if (active[i].checked) {
+                break;
+            }
+        }
+        if (i == active.length) {
+            document.getElementById("activeloc").innerHTML =
+                " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống trạng thái!";
+            status = false;
+        }
+        return document.getElementById("activeloc").innerHTML = "You select option " + (i + 1);
+
+        return status;
+    }
+</script>
+</html>
