--- a/webBanTiVi/src/main/resources/templates/user/page/product/pay.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/pay.html
@@ -70,7 +70,7 @@
                                     <div class="card-body" th:id="add">
                                         <div>
                                             <!--                                            ten, sdt-->
-                                            <div class="row justify-content-between mb-3">
+                                            <div class="row justify-content-between">
                                                 <div class="col">
                                                     <label class="form-label">Tên người nhận</label>
                                                     <input class="form-control" type="text" placeholder="họ và tên"
@@ -92,8 +92,9 @@
                                                          th:errors="*{phoneNumber}"></div>
                                                 </div>
                                             </div>
+                                            <br>
                                             <!--                                                email-->
-                                            <div class="mb-3" th:if="${session.user==null}">
+                                            <div class="mb-3">
                                                 <label class="form-label">Email</label>
                                                 <input type="email" class="form-control"
                                                        placeholder="oanhpham085@gmail.com"
@@ -104,12 +105,7 @@
                                                      th:if="${#fields.hasErrors('email')}"
                                                      th:errors="*{email}"></div>
                                             </div>
-                                            <div class="mb-3" th:if="${session.user!=null}" hidden="hidden">
-                                                <input type="email" class="form-control"
-                                                       placeholder="oanhpham085@gmail.com"
-                                                       th:value="${session.user.email}"
-                                                       id="email" th:name="email">
-                                            </div>
+                                            <br>
                                             <!--                                                address-->
                                             <div class="mb-3">
                                                 <label class="form-label">Địa chỉ nhận hàng</label>
@@ -305,8 +301,7 @@
                 " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống tên!";
             status = false;
         } else {
-            document.getElementById("nameloc").innerHTML =
-                " <i class='bx bx-x-circle' style='color:#ff0000' ></i>";
+            // document.getElementById("nameloc").innerHTML = "";
             status = true;
         }
         //address
@@ -315,24 +310,7 @@
                 " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống địa chỉ!";
             status = false;
         } else {
-            document.getElementById("addressloc").innerHTML =
-                " <i class='bx bx-x-circle' style='color:#ff0000' ></i>";
-            status = true;
-        }
-        //email
-        var filter = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
-        if (email.length < 1) {
-            document.getElementById("emailloc").innerHTML =
-                " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không được để trống email!";
-            status = false;
-        } else if (!filter.test(email.value)) {
-            document.getElementById("emailloc").innerHTML =
-                " <i class='bx bx-x-circle' style='color:#ff0000' ></i>Hay nhap dia chi email hop le.\nExample@gmail.com!";
-            email.focus;
-            status = false;
-        } else {
-            document.getElementById("emailloc").innerHTML =
-                " <img src='checked.gif'/>";
+            // document.getElementById("addressloc").innerHTML = "";
             status = true;
         }
         //phone
@@ -347,7 +325,18 @@
             document.getElementById("numloc").innerHTML = "Không đúng định dạng số điện thoại!";
             status = false;
         }
-
+        //email
+        var atposition = email.indexOf("@");
+        var dotposition = email.lastIndexOf(".");
+        if (atposition < 1 || dotposition < (atposition + 2)
+            || (dotposition + 2) >= email.length) {
+            document.getElementById("emailloc").innerHTML =
+                " <i class='bx bx-x-circle' style='color:#ff0000' ></i> Không đúng định dạng email!";
+            alert("Please enter a valid e-mail address.");
+            return false;
+        } else {
+            return true;
+        }
         return status;
     }
 
