--- a/webBanTiVi/src/main/resources/templates/user/page/product/pro_cart.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/pro_cart.html
@@ -128,6 +128,9 @@
                                                                th:value="${item.quantity}">
                                                         <input class="plus is-form plus"
                                                                type="button" value="+">
+                                                        <div th:if="${qty>item.quantity}">
+                                                            <span>Lỗi</span>
+                                                        </div>
                                                     </div>
                                                 </td>
                                                 <td>
@@ -181,7 +184,8 @@
                         <div class="card-body">
                                <span class="fs-4"> Tổng tiền:
                                    <span class="text-end text-danger">
-                                    <span class="total-pro" th:text="|${#numbers.formatDecimal(total,0,'COMMA',0,'POINT')} (VNĐ)|"></span>
+                                    <span class="total-pro"
+                                          th:text="|${#numbers.formatDecimal(total,0,'COMMA',0,'POINT')} (VNĐ)|"></span>
                                 </span></span>
                         </div>
                         <div class="card-footer">
